api_versioned_docs/version-12.0.0-rc1/avalonia/index.mdx
---
title: 'Avalonia'
hide_title: true
slug: '/avalonia'
uid: 'Avalonia'
commentId: 'N:Avalonia'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Base'
apiKind: 'Namespace'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia'
tfms:
  - 'net10.0'
  - 'net10.0-android36.0'
  - 'net8.0-ios18.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">Avalonia Namespace</h1>

<div className="apiref-page__lead">

Namespace `Avalonia`

</div>

## Types

- [AndroidApplicationExtensions](androidapplicationextensions.mdx)
- [AndroidPlatformOptions](androidplatformoptions.mdx)
- [AndroidRenderingMode](androidrenderingmode.mdx) - Represents the rendering mode for platform graphics.
- [AppBuilder](appbuilder.mdx) - Initializes platform-specific services for an [Avalonia.Application](xref:Avalonia.Application).
- [AppBuilder.AppMainDelegate](appbuilder-appmaindelegate.mdx)
- [AppBuilderDesktopExtensions](appbuilderdesktopextensions.mdx)
- [AppBuilderExtension](appbuilderextension.mdx)
- [AppBuilderExtensions](appbuilderextensions.mdx)
- [Application](application.mdx) - Encapsulates a Avalonia application.
- [AttachedProperty&lt;TValue&gt;](attachedproperty-1.mdx) - An attached avalonia property.
- [AvaloniaInternalException](avaloniainternalexception.mdx) - Exception signifying an internal logic error in Avalonia.
- [AvaloniaLocator](avalonialocator.mdx)
- [AvaloniaNativePlatformExtensions](avalonianativeplatformextensions.mdx)
- [AvaloniaNativePlatformOptions](avalonianativeplatformoptions.mdx) - OSX backend options.
- [AvaloniaNativeRenderingMode](avalonianativerenderingmode.mdx) - Represents the rendering mode for platform graphics.
- [AvaloniaObject](avaloniaobject.mdx) - An object with [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) support.
- [AvaloniaObjectExtensions](avaloniaobjectextensions.mdx) - Provides extension methods for [Avalonia.AvaloniaObject](xref:Avalonia.AvaloniaObject) and related classes.
- [AvaloniaProperty](avaloniaproperty.mdx) - Base class for avalonia properties.
- [AvaloniaPropertyChangedEventArgs](avaloniapropertychangedeventargs.mdx) - Provides information for a avalonia property change.
- [AvaloniaPropertyChangedEventArgs&lt;T&gt;](avaloniapropertychangedeventargs-1.mdx) - Provides information for an Avalonia property change.
- [AvaloniaPropertyChangedExtensions](avaloniapropertychangedextensions.mdx) - Provides extensions for [Avalonia.AvaloniaPropertyChangedEventArgs](xref:Avalonia.AvaloniaPropertyChangedEventArgs).
- [AvaloniaPropertyMetadata](avaloniapropertymetadata.mdx) - Base class for avalonia property metadata.
- [AvaloniaPropertyRegistry](avaloniapropertyregistry.mdx) - Tracks registered [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) instances.
- [AvaloniaProperty&lt;TValue&gt;](avaloniaproperty-1.mdx) - A typed avalonia property.
- [AvaloniaX11PlatformExtensions](avaloniax11platformextensions.mdx)
- [ClassicDesktopStyleApplicationLifetimeExtensions](classicdesktopstyleapplicationlifetimeextensions.mdx) - [IClassicDesktopStyleApplicationLifetime](xref:Avalonia.Controls.ApplicationLifetimes.IClassicDesktopStyleApplicationLifetime) related [AppBuilder](xref:Avalonia.AppBuilder) extensions.
- [CornerRadius](cornerradius.mdx) - Represents the radii of a rectangle's corners.
- [DeveloperToolsExtensions](developertoolsextensions.mdx)
- [DirectPropertyBase&lt;TValue&gt;](directpropertybase-1.mdx) - Base class for direct properties.
- [DirectPropertyMetadata&lt;TValue&gt;](directpropertymetadata-1.mdx) - Metadata for direct avalonia properties.
- [DirectProperty&lt;TOwner, TValue&gt;](directproperty-2.mdx) - A direct avalonia property.
- [HeadlessVncPlatformExtensions](headlessvncplatformextensions.mdx)
- [IAvaloniaDependencyResolver](iavaloniadependencyresolver.mdx)
- [IDataContextProvider](idatacontextprovider.mdx) - Defines an element with a data context that can be used for binding.
- [IDescription](idescription.mdx) - Interface for objects with a [Avalonia.IDescription.Description](xref:Avalonia.IDescription.Description).
- [IDirectPropertyMetadata](idirectpropertymetadata.mdx) - Untyped interface to [Avalonia.DirectPropertyMetadata&lt;T&gt;](xref:Avalonia.DirectPropertyMetadata%601)
- [INamed](inamed.mdx) - Objects implementing this interface and providing a value for [Avalonia.INamed.Name](xref:Avalonia.INamed.Name) will be registered in the
relevant namescope when constructed in XAML.
- [IOptionalFeatureProvider](ioptionalfeatureprovider.mdx)
- [IStyledPropertyMetadata](istyledpropertymetadata.mdx) - Untyped interface to [Avalonia.StyledPropertyMetadata&lt;T&gt;](xref:Avalonia.StyledPropertyMetadata%601)
- [LocatorExtensions](locatorextensions.mdx)
- [LoggingExtensions](loggingextensions.mdx)
- [MacOSPlatformOptions](macosplatformoptions.mdx) - OSX front-end options.
- [Matrix](matrix.mdx) - A 3x3 matrix.
- [Matrix.Decomposed](matrix-decomposed.mdx)
- [OptionalFeatureProviderExtensions](optionalfeatureproviderextensions.mdx)
- [PixelPoint](pixelpoint.mdx) - Represents a point in device pixels.
- [PixelRect](pixelrect.mdx) - Represents a rectangle in device pixels.
- [PixelSize](pixelsize.mdx) - Represents a size in device pixels.
- [PixelVector](pixelvector.mdx) - Defines a vector.
- [Point](point.mdx) - Defines a point.
- [Points](points.mdx) - Represents a collection of [Avalonia.Point](xref:Avalonia.Point) values that can be individually accessed by index.
- [Rect](rect.mdx) - Defines a rectangle.
- [RelativePoint](relativepoint.mdx) - Defines a point that may be defined relative to a containing element.
- [RelativeRect](relativerect.mdx) - Defines a rectangle that may be defined relative to a containing element.
- [RelativeScalar](relativescalar.mdx) - Defines a scalar value that may be defined relative to a containing element.
- [RelativeUnit](relativeunit.mdx) - Defines the reference point units of an [Avalonia.RelativePoint](xref:Avalonia.RelativePoint) or
[Avalonia.RelativeRect](xref:Avalonia.RelativeRect).
- [RenderTargetCorruptedException](rendertargetcorruptedexception.mdx)
- [RenderTargetNotReadyException](rendertargetnotreadyexception.mdx)
- [RoundedRect](roundedrect.mdx)
- [Size](size.mdx) - Defines a size.
- [SkiaApplicationExtensions](skiaapplicationextensions.mdx) - Skia application extensions.
- [SkiaOptions](skiaoptions.mdx) - Options for Skia rendering subsystem.
- [StreamBindingExtensions](streambindingextensions.mdx)
- [StyledElement](styledelement.mdx) - Extends an [Avalonia.Animation.Animatable](xref:Avalonia.Animation.Animatable) with the following features:

- An inherited [Avalonia.StyledElement.DataContext](xref:Avalonia.StyledElement.DataContext).
- Implements [Avalonia.LogicalTree.ILogical](xref:Avalonia.LogicalTree.ILogical) to form part of a logical tree.
- A collection of class strings for custom styling.
- [StyledElementExtensions](styledelementextensions.mdx)
- [StyledPropertyMetadata&lt;TValue&gt;](styledpropertymetadata-1.mdx) - Metadata for styled avalonia properties.
- [StyledProperty&lt;TValue&gt;](styledproperty-1.mdx) - A styled avalonia property.
- [SystemFontAppBuilderExtension](systemfontappbuilderextension.mdx)
- [Thickness](thickness.mdx) - Describes the thickness of a frame around a rectangle.
- [UnsetValueType](unsetvaluetype.mdx) - Class representing the [Avalonia.AvaloniaProperty.UnsetValue](xref:Avalonia.AvaloniaProperty.UnsetValue).
- [UrlOpenedEventArgs](urlopenedeventargs.mdx)
- [Vector](vector.mdx) - Defines a vector.
- [Vector3D](vector3d.mdx)
- [Visual](visual.mdx) - Base class for controls that provides rendering and related visual properties.
- [VisualExtensions](visualextensions.mdx) - Extension methods for [Avalonia.Visual](xref:Avalonia.Visual).
- [VisualTreeAttachmentEventArgs](visualtreeattachmenteventargs.mdx) - Holds the event arguments for the [Avalonia.Visual.AttachedToVisualTree](xref:Avalonia.Visual.AttachedToVisualTree) and
[Avalonia.Visual.DetachedFromVisualTree](xref:Avalonia.Visual.DetachedFromVisualTree) events.
- [X11PlatformOptions](x11platformoptions.mdx) - Platform-specific options which apply to Linux.
- [X11RenderingMode](x11renderingmode.mdx) - Represents the rendering mode for platform graphics.
</ApiRefPage>

